<?xml version="1.0"?>
<package format="2">
  <name>ascension</name>
  <version>0.0.1</version>
  <description>ROS driver for Ascension Trakstar / DriveBAY devices</description>

  <author  email="marco.esposito@tum.de">Marco Esposito</author>
  <maintainer email="marco.esposito@tum.de">Marco Esposito</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
